[project]
name = "langgraph-rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "ipython>=9.4.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "langgraph-cli[inmem]>=0.3.5",
    "langsmith>=0.4.8",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
]
